Fix image and nav layout on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,7 +2,6 @@
  * Site header
  */
 .site-header {
-    border-bottom: 1px solid $grey-color-light;
     min-height: 56px;
 
     // Positioning context for the mobile navigation icon
@@ -38,9 +37,6 @@
     }
 
     @include media-query($on-palm) {
-        position: absolute;
-        top: 9px;
-        right: 30px;
         background-color: $background-color;
         border: 1px solid $grey-color-light;
         border-radius: 5px;
@@ -48,7 +44,7 @@
 
         .menu-icon {
             display: block;
-            float: right;
+            margin: 0 auto;
             width: 36px;
             height: 26px;
             line-height: 0;
